# Modern-Analytics

./: .gitignore  FundsGDPhealth_export.xlsx  README.md  example.py  main.py  pyproject.toml  requirements.txt  step2.py
archive/: prep.ipynb
data/processed/: 5comp_embeddings.safetensors  FundsGDPhealth_export.csv  euscivoc_similarity.csv  health_orgs_pub.csv  topic_entities_raw.xlsx  topics.csv
data/processed/model_dir/: ctfidf.safetensors  ctfidf_config.json
example/: app3.py  app4.py  step1.py  step3.py
health/: app.py  data.py  pyproject.toml
health/data/: 2comp_embeddings.safetensors  FundsGDPhealth_export.csv
health/data/model_dir/: topic_embeddings.safetensors  topics.json
health/modules/: graph.py  map.py  plot.py  topic.py
health/rsconnect-python/: health.json
health/utils/: graph_utils.py  helper_text.py  plot_utils.py  topic_utils.py
health/www/: layout.css  style.css
health/www/pwa/: manifest.json
notebooks/: hello.ipynb  merge.ipynb  network.ipynb  prep.ipynb  test.ipynb  topic_analysis.ipynb  topic_model.ipynb
template/: app.py  data.py
template/modules/: map.py  plot.py  topic.py
template/utils/: helper_text.py  map_utils.py  plot_utils.py  topic_utils.py
template/www/: index.js  style.css
