[project]
name = "mda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bertopic>=0.17.0",
    "datamapplot>=0.5.1",
    "datasets>=3.5.0",
    "hdbscan>=0.8.40",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.3",
    "umap>=0.1.1",
]
