[project]
name = "modern-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic[spacy]>=0.17.0",
    "datamapplot>=0.5.1",
    "datasets>=3.6.0",
    "hdbscan>=0.8.40",
    "huggingface-hub>=0.31.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "shiny>=1.4.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "umap>=0.1.1",
    "xformers>=0.0.30",
]
